--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         Streamline your international trade operations with ease.
       </p>
       <p class="lead">
-        <a href="mailto:info@prodani.eu" class="btn btn-lg btn-light fw-bold border-white bg-white">Connect with us</a>
+        <a href="mailto:partner.relations@prodani.eu" class="btn btn-lg btn-light fw-bold border-white bg-white">Connect with us</a>
       </p>
     </main>
 
